--- a/bin/application/AlojamientoPage.fxml
+++ b/bin/application/AlojamientoPage.fxml
@@ -9,40 +9,29 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AlojamientoClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AlojamientoClass">
    <children>
-      <ComboBox fx:id="cbCiudad" layoutX="62.0" layoutY="72.0" onMouseClicked="#setComboBoxCiudad" prefHeight="51.0" prefWidth="327.0" />
-      <ComboBox fx:id="cbTipo" layoutX="62.0" layoutY="158.0" prefHeight="51.0" prefWidth="327.0" />
-      <ComboBox fx:id="cbAlojamientos" layoutX="63.0" layoutY="434.0" prefHeight="51.0" prefWidth="327.0" />
-      <DatePicker fx:id="dpEntrada" layoutX="62.0" layoutY="255.0" prefHeight="51.0" prefWidth="327.0" />
-      <DatePicker fx:id="dpSalida" layoutX="62.0" layoutY="340.0" prefHeight="51.0" prefWidth="327.0" />
-      <Text layoutX="62.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad">
+      <ComboBox fx:id="cbCiudad" layoutX="60.0" layoutY="72.0" onMouseClicked="#setComboBoxCiudad" prefHeight="50.0" prefWidth="400.0" />
+      <ComboBox fx:id="cbAlojamientos" layoutX="60.0" layoutY="209.0" prefHeight="50.0" prefWidth="400.0" />
+      <DatePicker fx:id="dpEntrada" layoutX="60.0" layoutY="343.0" prefHeight="51.0" prefWidth="200.0" />
+      <DatePicker fx:id="dpSalida" layoutX="260.0" layoutY="343.0" prefHeight="51.0" prefWidth="200.0" />
+      <Text fill="#1d334a" layoutX="60.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad">
          <font>
-            <Font size="18.0" />
+            <Font name="Malgun Gothic" size="20.0" />
          </font>
       </Text>
-      <Text layoutX="61.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filtrar por tipo">
+      <Text fill="#1d334a" layoutX="60.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alojamientos disponibles">
          <font>
-            <Font size="18.0" />
+            <Font name="Malgun Gothic" size="20.0" />
          </font>
       </Text>
-      <Text layoutX="62.0" layoutY="428.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alojamientos disponibles">
+      <Text fill="#1d334a" layoutX="60.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fechas">
          <font>
-            <Font size="18.0" />
+            <Font name="Malgun Gothic" size="20.0" />
          </font>
       </Text>
-      <Text layoutX="62.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de entrada">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Text layoutX="62.0" layoutY="334.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de salida">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="720.0" layoutX="493.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="button" layoutX="63.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#setImagen" prefHeight="75.0" prefWidth="150.0" style="-fx-background-color: #e55137;" text="boton" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="620.0" layoutX="573.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="button" layoutX="60.0" layoutY="460.0" mnemonicParsing="false" onMouseClicked="#setImagen" prefHeight="75.0" prefWidth="200.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="18.0" />
          </font>
@@ -50,5 +39,25 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <Text fill="#1d334a" layoutX="287.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="145.13671875">
+         <font>
+            <Font name="Malgun Gothic" size="32.0" />
+         </font>
+      </Text>
+      <Text fill="#1d334a" layoutX="441.0" layoutY="495.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€" textAlignment="RIGHT" wrappingWidth="20.13671875">
+         <font>
+            <Font name="Malgun Gothic" size="32.0" />
+         </font>
+      </Text>
+      <Text fill="#1c3145a3" layoutX="335.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€  por noche" textAlignment="RIGHT" wrappingWidth="125.13671875">
+         <font>
+            <Font name="Malgun Gothic" size="20.0" />
+         </font>
+      </Text>
+      <Text fill="#1c3145a3" layoutX="287.0" layoutY="529.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="48.13671875">
+         <font>
+            <Font name="Malgun Gothic" size="20.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
