--- a/bin/application/BilletesPage.fxml
+++ b/bin/application/BilletesPage.fxml
@@ -49,7 +49,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Text fx:id="txtPrecio" fill="#1d334a" layoutX="450.0" layoutY="454.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00" wrappingWidth="150.0">
+                  <Text fx:id="txtPrecio" fill="#1d334a" layoutX="386.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="150.0">
                      <font>
                         <Font name="Malgun Gothic" size="40.0" />
                      </font>
@@ -69,18 +69,23 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Text fill="#1d334a" layoutX="547.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€" textAlignment="RIGHT" wrappingWidth="24.0">
+                     <font>
+                        <Font name="Malgun Gothic" size="40.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
          </center>
       </BorderPane>
-      <Button fx:id="btnSoloIda" layoutX="276.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaSoloIda" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="solo ida" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <Button fx:id="btnSoloIda" layoutX="276.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#cargaSoloIda" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="solo ida" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="btnVuelta" layoutX="406.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#cargaIdaYvuelta" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="ida y vuelta" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <Button fx:id="btnVuelta" layoutX="406.0" layoutY="40.0" mnemonicParsing="false" onMouseClicked="#cargaIdaYvuelta" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" text="ida y vuelta" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="14.0" />
          </font>
