--- a/bin/application/AlojamientoPage.fxml
+++ b/bin/application/AlojamientoPage.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AlojamientoClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AlojamientoClass">
    <children>
       <ComboBox fx:id="cbCiudad" layoutX="60.0" layoutY="72.0" onMouseClicked="#setComboBoxCiudad" prefHeight="50.0" prefWidth="400.0" />
-      <ComboBox fx:id="cbAlojamientos" layoutX="60.0" layoutY="209.0" prefHeight="50.0" prefWidth="400.0" />
+      <ComboBox fx:id="cbAlojamientos" layoutX="61.0" layoutY="207.0" onMouseClicked="#setComboBoxAlojamiento2" prefHeight="50.0" prefWidth="400.0" />
       <DatePicker fx:id="dpEntrada" layoutX="60.0" layoutY="343.0" prefHeight="51.0" prefWidth="200.0" />
       <DatePicker fx:id="dpSalida" layoutX="260.0" layoutY="343.0" prefHeight="51.0" prefWidth="200.0" />
       <Text fill="#1d334a" layoutX="60.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad">
@@ -30,8 +30,8 @@
             <Font name="Malgun Gothic" size="20.0" />
          </font>
       </Text>
-      <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="620.0" layoutX="573.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="button" layoutX="60.0" layoutY="460.0" mnemonicParsing="false" onMouseClicked="#setImagen" prefHeight="75.0" prefWidth="200.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+      <ImageView fx:id="imageView" fitHeight="454.0" fitWidth="579.0" layoutX="496.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="button" layoutX="60.0" layoutY="460.0" mnemonicParsing="false" onMouseClicked="#prueba" prefHeight="75.0" prefWidth="200.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
          <font>
             <Font name="Malgun Gothic Bold" size="18.0" />
          </font>
