--- a/src/application/UserPage.fxml
+++ b/src/application/UserPage.fxml
@@ -4,20 +4,51 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserClass">
    <children>
-      <TextField fx:id="txtNombre" layoutX="418.0" layoutY="199.0" prefHeight="25.0" prefWidth="210.0" />
-      <Text layoutX="179.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" />
-      <Text layoutX="179.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Apellidos" />
-      <TextField fx:id="txtApellidos" layoutX="418.0" layoutY="261.0" prefHeight="25.0" prefWidth="210.0" />
-      <Text layoutX="176.0" layoutY="331.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DNI" />
-      <TextField fx:id="txtDni" layoutX="418.0" layoutY="306.0" prefHeight="25.0" prefWidth="210.0" />
-      <DatePicker fx:id="dpNacimiento" layoutX="418.0" layoutY="368.0" prefHeight="25.0" prefWidth="219.0" />
-      <Text layoutX="176.0" layoutY="385.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de nacimiento" />
-      <Text layoutX="168.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono" />
-      <TextField fx:id="txtTelefono" layoutX="418.0" layoutY="427.0" prefHeight="25.0" prefWidth="210.0" />
-      <Button fx:id="btnEnviar" layoutX="427.0" layoutY="493.0" mnemonicParsing="false" onMouseClicked="#setDatos" text="Button" />
+      <TextField fx:id="txtNombre" layoutX="354.0" layoutY="165.0" prefHeight="25.0" prefWidth="250.0">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></TextField>
+      <Text fill="#1d334a" layoutX="354.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Text>
+      <Text fill="#1d334a" layoutX="676.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Apellidos">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Text>
+      <TextField fx:id="txtApellidos" layoutX="676.0" layoutY="165.0" prefHeight="25.0" prefWidth="250.0">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></TextField>
+      <Text fill="#1d334a" layoutX="354.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Documento de identidad" wrappingWidth="243.19580078125">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Text>
+      <TextField fx:id="txtDni" layoutX="354.0" layoutY="304.0" prefHeight="25.0" prefWidth="250.0">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></TextField>
+      <DatePicker fx:id="dpNacimiento" layoutX="676.0" layoutY="304.0" prefHeight="45.0" prefWidth="250.0" />
+      <Text fill="#1d334a" layoutX="676.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de nacimiento">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Text>
+      <Text fill="#1d334a" layoutX="354.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Text>
+      <TextField fx:id="txtTelefono" layoutX="354.0" layoutY="434.0" prefHeight="25.0" prefWidth="250.0">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></TextField>
+      <Button fx:id="btnEnviar" layoutX="676.0" layoutY="434.0" mnemonicParsing="false" onMouseClicked="#setDatos" prefHeight="45.0" prefWidth="250.0" style="-fx-background-color: #e55137;" text="Actualizar credenciales" textFill="#f6f6f6">
+         <font>
+            <Font name="Malgun Gothic" size="21.0" />
+         </font></Button>
    </children>
 </AnchorPane>
