--- a/bin/application/IdayvueltaPage.fxml
+++ b/bin/application/IdayvueltaPage.fxml
@@ -60,7 +60,12 @@
             </ImageView>
          </graphic>
       </Button>
-      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="387.0" layoutY="454.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.00" wrappingWidth="213.0">
+      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="386.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="150.0">
+         <font>
+            <Font name="Malgun Gothic" size="40.0" />
+         </font>
+      </Text>
+      <Text fill="#1d334a" layoutX="547.0" layoutY="452.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€" textAlignment="RIGHT" wrappingWidth="24.0">
          <font>
             <Font name="Malgun Gothic" size="40.0" />
          </font>
