--- a/bin/application/LoginPage.fxml
+++ b/bin/application/LoginPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
    <center>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="812.0" style="-fx-background-color: #f6f6f6;" BorderPane.alignment="CENTER">
          <children>
@@ -31,11 +31,17 @@
                   <TextField fx:id="txtUser" layoutX="40.0" layoutY="186.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="240.0">
                      <font>
                         <Font name="Malgun Gothic" size="20.0" />
-                     </font></TextField>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextField>
                   <PasswordField fx:id="txtPass" layoutX="40.0" layoutY="303.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="240.0">
                      <font>
                         <Font name="Malgun Gothic" size="20.0" />
-                     </font></PasswordField>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></PasswordField>
                   <Button fx:id="btnLogin" layoutX="40.0" layoutY="467.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="60.0" prefWidth="240.0" style="-fx-background-color: #e55137;" text="Iniciar sesión" textFill="#f6f6f6">
                      <font>
                         <Font name="Malgun Gothic" size="20.0" />
