--- a/bin/application/SegurosPage.fxml
+++ b/bin/application/SegurosPage.fxml
@@ -1,19 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ExperienciasClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SegurosClass">
    <children>
-      <Text fx:id="hola" layoutX="584.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Seguros">
+      <DatePicker fx:id="dpInicio" layoutX="440.0" layoutY="46.0" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="200.0" />
+      <DatePicker fx:id="dpFin" layoutX="640.0" layoutY="46.0" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="200.0" />
+      <Text fx:id="txtPrecio" fill="#1d334a" layoutX="665.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="145.13671875">
          <font>
-            <Font size="26.0" />
+            <Font name="Malgun Gothic" size="32.0" />
          </font>
       </Text>
-      <Text fx:id="hola1" layoutX="533.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Work in progress...">
+      <Text fill="#1d334a" layoutX="819.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€" textAlignment="RIGHT" wrappingWidth="20.13671875">
          <font>
-            <Font size="26.0" />
+            <Font name="Malgun Gothic" size="32.0" />
+         </font>
+      </Text>
+      <Text layoutX="389.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Economic">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Text layoutX="821.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pro">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Text layoutX="605.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Luxury">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Button fx:id="btnEco" layoutX="389.0" layoutY="171.0" mnemonicParsing="false" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="103.0" style="-fx-background-color: #e55137;" text="Info" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="btnPro" layoutX="788.0" layoutY="171.0" mnemonicParsing="false" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="103.0" style="-fx-background-color: #e55137;" text="Info" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="btnLux" layoutX="588.0" layoutY="171.0" mnemonicParsing="false" onAction="#eventActionInfoSeguro" prefHeight="51.0" prefWidth="103.0" style="-fx-background-color: #e55137;" text="Info" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="btnAddCarrito" layoutX="440.0" layoutY="474.0" mnemonicParsing="false" onMouseClicked="#reservaSeguro" prefHeight="75.0" prefWidth="200.0" style="-fx-background-color: #e55137;" text="añadir al carrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <TextFlow fx:id="tf" layoutX="380.0" layoutY="283.0" prefHeight="164.0" prefWidth="519.0" textAlignment="CENTER">
+         <children>
+            <Text fx:id="txtDescripcion" strokeType="OUTSIDE" strokeWidth="0.0">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </TextFlow>
+      <Text fx:id="txtSeguro" layoutX="567.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="145.13671875">
+         <font>
+            <Font size="24.0" />
          </font>
       </Text>
    </children>
