--- a/src/application/MainInfinity.fxml
+++ b/src/application/MainInfinity.fxml
@@ -9,11 +9,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6f6;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainInfinityClass">
+<Pane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6f6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainInfinityClass">
    <children>
       <AnchorPane layoutY="30.0" maxHeight="122.0" maxWidth="1280.0" minHeight="0.0" minWidth="0.0" prefHeight="90.0" prefWidth="1280.0" style="-fx-background-color: #1D334A;">
          <children>
@@ -78,7 +79,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Home" layoutX="1051.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#userLoad" prefHeight="58.0" prefWidth="63.0" style="-fx-background-color: transparent;" text="Button">
+            <Button fx:id="Home" layoutX="1051.0" layoutY="16.0" mnemonicParsing="false" onMouseClicked="#homeLoad" prefHeight="58.0" prefWidth="63.0" style="-fx-background-color: transparent;" text="Button">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -90,27 +91,37 @@
                   </ImageView>
                </graphic>
             </Button>
+            <Pane fx:id="pNumProductos" layoutX="1229.0" layoutY="43.0" prefHeight="31.0" prefWidth="37.0" visible="false">
+               <children>
+                  <Circle fill="#e55137" layoutX="19.0" layoutY="16.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Text fx:id="txtNumProductos" fill="WHITE" layoutX="4.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="30.0" />
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
       <BorderPane fx:id="bp" layoutY="120.0" prefHeight="600.0" prefWidth="1280.0">
          <center>
             <AnchorPane fx:id="ap" prefHeight="600.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="641.0" fitWidth="1280.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/fondo.jpg" />
-                     </image>
-                  </ImageView>
-                  <Text fill="#1d334a" layoutX="287.0" layoutY="232.0" stroke="#c4cfda" strokeType="OUTSIDE" strokeWidth="0.0" text="Infinity Travel" wrappingWidth="511.1367187499999">
-                     <font>
-                        <Font name="Malgun Gothic Bold" size="64.0" />
-                     </font>
-                  </Text>
-                  <Text fill="#1d334a" layoutX="287.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Las posibilidades son infinitas..." wrappingWidth="597.1367187499999">
-                     <font>
-                        <Font name="Malgun Gothic" size="32.0" />
-                     </font>
-                  </Text>
+                  <AnchorPane fx:id="apHome" layoutY="-2.0">
+                     <children>
+                        <ImageView fitHeight="641.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../images/fondo.jpg" />
+                           </image>
+                        </ImageView>
+                        <Text fill="#1d334a" layoutX="79.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Las posibilidades son infinitas..." wrappingWidth="597.1367187499999">
+                           <font>
+                              <Font name="Malgun Gothic" size="32.0" />
+                           </font>
+                        </Text>
+                        <Text fill="#1d334a" layoutX="79.0" layoutY="229.0" stroke="#c4cfda" strokeType="OUTSIDE" strokeWidth="0.0" text="Infinity Travel" wrappingWidth="511.1367187499999">
+                           <font>
+                              <Font name="Malgun Gothic Bold" size="64.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
                   <AnchorPane layoutX="1030.0" layoutY="-2.0" prefHeight="600.0" prefWidth="250.0">
                      <children>
                         <AnchorPane fx:id="apCarrito" prefHeight="600.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" visible="false">
